force-app/main/default/objects/Deal_Snapshot__c/Deal_Snapshot__c.object-meta.xml
<CustomObject>
    <description>Weekly Opportunity Trends</description>
    <label>Deal Snapshot</label>
    <nameField>
        <label>Deal Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deal Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>