force-app/main/default/objects/Deal_Snapshot__c/fields/Days_in_Stage__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Stage__c</fullName>
    <label>Days in Stage</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>