force-app/main/default/objects/Deal_Snapshot__c/fields/IdxHash__c.field-meta.xml
<CustomField>
    <fullName>IdxHash__c</fullName>
    <description>Concatenate of OppId+SnapDate  = 18+10 = 28  - so 32 is safe</description>
    <externalId>true</externalId>
    <label>IdxHash</label>
    <length>32</length>
    <type>Text</type>
</CustomField>