force-app/main/default/objects/Deal_Snapshot__c/fields/Opp_Id_18__c.field-meta.xml
<CustomField>
    <fullName>Opp_Id_18__c</fullName>
    <label>Opp Id 18</label>
    <length>20</length>
    <type>Text</type>
</CustomField>