force-app/main/default/objects/Deal_Snapshot__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <label>Owner</label>
    <length>40</length>
    <type>Text</type>
</CustomField>