force-app/main/default/objects/Deal_Snapshot__c/fields/OwnerID__c.field-meta.xml
<CustomField>
    <fullName>OwnerID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OwnerID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deal_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>