force-app/main/default/objects/Deal_Snapshot__c/fields/Pipeline_Amount__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Amount__c</fullName>
    <label>Pipeline Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>