force-app/main/default/objects/Deal_Snapshot__c/fields/Primary_Product__c.field-meta.xml
<CustomField>
    <fullName>Primary_Product__c</fullName>
    <label>Primary Product</label>
    <length>64</length>
    <type>Text</type>
</CustomField>